linux: ensure firmware dir exists

--- a/packages/linux/build
+++ b/packages/linux/build
@@ -23,7 +23,7 @@ make modules
 install_dir="`pwd`/.install"
 debug_dir="`pwd`/.install-debuginfo/usr/lib/debug"
 rm -rf $install_dir $debug_dir
-mkdir -p $install_dir $debug_dir
+mkdir -p $install_dir/lib/firmware $debug_dir
 
 make modules_install \
   INSTALL_MOD_PATH=.install \
