libmad: import ubuntu patches, disable aso on omap4

--- a/packages/libmad/build
+++ b/packages/libmad/build
@@ -20,13 +20,18 @@ case $TARGET_ARCH in
     ;;
 esac
 
+[ "$TARGET_PLATFORM" = omap4 ] && OMAP4_OPTS="--disable-aso"
+
 cd $BUILD/$1*
+touch NEWS AUTHORS ChangeLog
+do_autoconf
 do_configure \
   --enable-speed \
   --enable-sso \
   --enable-fpm=$FPM \
   --disable-profiling \
   --disable-debugging \
+  $OMAP4_OPTS \
 
 make
 make_install
