sgx540-OpenGLES: upgrade to 1.9.0.4.1.1

--- a/packages/sgx540-OpenGLES/build
+++ b/packages/sgx540-OpenGLES/build
@@ -9,7 +9,6 @@ install_dir_debug="$PWD/.install-debuginfo"
 
 rm -rf "$install_dir"
 mkdir -p "$install_dir"
+cp -PR usr/lib/debug/* $install_dir_debug
 cp -PR usr $install_dir
-
-strip_libs "$install_dir"     "$install_dir_debug/usr/lib/debug"
-strip_bins "$install_dir/usr" "$install_dir_debug/usr/lib/debug"
+rm -rf $install_dir/usr/lib/debug
