firmware-arm-syslink-mm: upgrade to 2.x.8~2+dce1+1.1

--- a/packages/firmware-arm-syslink-mm/build
+++ b/packages/firmware-arm-syslink-mm/build
@@ -7,9 +7,10 @@ cd $BUILD/$1*
 install_dir="$PWD/.install"
 
 rm -rf "$install_dir"
-mkdir -p "$install_dir/firmware/omap4"
+mkdir -p "$install_dir/firmware"
 
-cp -PR *.xem3 "$install_dir/firmware/omap4"
-cp -PR *.xe64T "$install_dir/firmware/omap4"
-ln -s omap4/ducati-dce-sysm3.xem3 .install/firmware/ducati-m3-core0.xem3
-ln -s omap4/tesla-dvp-dsp.xe64T   .install/firmware/tesla-dsp.xe64T
+cp -P *.xem3 "$install_dir/firmware"
+cp -P *.xe64T "$install_dir/firmware"
+
+ln -sf ducati-dce-sysm3.xem3 $install_dir/firmware/ducati-m3-core0.xem3
+ln -sf test_omx_dsp.xe64T $install_dir/firmware/tesla-dsp.xe64T
