--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -41,7 +41,7 @@ xbmc_set_option $1 "libnfs"            "nfs"
 xbmc_set_option $1 "afpclient"         "afpclient"
 xbmc_set_option $1 "airtunes"          "airtunes"
 xbmc_set_option $1 "screensavers"      "rsxs"
-xbmc_set_option $1 "gst"               "gstreamer"
+xbmc_set_option $1 "gstreamer"         "gstreamer"
 
 # check for nVidia ARM Tegra2 optimizations
 CFG_TEGRA="--disable-tegra"
