geexbox-xbmc-x86_64-generic.conf : update

--- a/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-x86_64-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120602-r14420"
+CONFIG_KERNELVERSION="devel-20120715-r14722"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -42,6 +42,7 @@ CONFIG_TARGET_CPU_generic=y
 # CONFIG_TARGET_CPU_core2 is not set
 # CONFIG_TARGET_CPU_corei7 is not set
 # CONFIG_TARGET_CPU_corei7-avx is not set
+# CONFIG_TARGET_CPU_core-avx-i is not set
 # CONFIG_TARGET_CPU_atom is not set
 # CONFIG_TARGET_CPU_k8 is not set
 # CONFIG_TARGET_CPU_opteron is not set
@@ -53,6 +54,9 @@ CONFIG_TARGET_CPU_generic=y
 # CONFIG_TARGET_CPU_amdfam10 is not set
 # CONFIG_TARGET_CPU_barcelona is not set
 # CONFIG_TARGET_CPU_btver1 is not set
+# CONFIG_TARGET_CPU_bdver1 is not set
+# CONFIG_TARGET_CPU_bdver2 is not set
+# CONFIG_TARGET_CPU_amdfusion is not set
 CONFIG_OPT_TARGET_CPU="generic"
 # CONFIG_FPU_OPTIMIZATIONS_387 is not set
 # CONFIG_FPU_OPTIMIZATIONS_SSE is not set
@@ -80,6 +84,7 @@ CONFIG_OPTIMIZATIONS_SPEED=y
 CONFIG_COMPRESSION_XZ=y
 # CONFIG_COMPRESSION_GZIP is not set
 # CONFIG_OPT_DYNAMIC_SYSROOT is not set
+# CONFIG_OPT_EATMYDATA is not set
 CONFIG_OPT_VERBOSE=y
 CONFIG_OPT_CONCURRENCY_MAKE_LEVEL=3
 # CONFIG_OPT_MIRROR is not set
@@ -216,8 +221,8 @@ CONFIG_OPT_FTP_SERVER=y
 # CONFIG_HTTP_SERVER is not set
 CONFIG_OPT_SAMBA=y
 # CONFIG_SAMBA_SERVER is not set
-CONFIG_AUTOMOUNTER_SMB=y
-CONFIG_AUTOMOUNTER_NFS=y
+# CONFIG_AUTOMOUNTER_SMB is not set
+# CONFIG_AUTOMOUNTER_NFS is not set
 # CONFIG_AUTOMOUNTER_9P is not set
 
 #
@@ -253,7 +258,6 @@ CONFIG_PKG_appleir=y
 CONFIG_PKG_cryptodev=y
 CONFIG_PKG_crystalhd=y
 # CONFIG_PKG_cwiid is not set
-# CONFIG_PKG_dvb-usb-rtl2832u is not set
 CONFIG_PKG_eventlircd=y
 CONFIG_PKG_lirc=y
 CONFIG_OPT_lirc_devtools=y
@@ -342,6 +346,7 @@ CONFIG_PKG_firmware-wifi-ralink=y
 CONFIG_PKG_firmware-wifi-wilink12xx=y
 CONFIG_PKG_firmware-wifi-zd1201=y
 CONFIG_PKG_firmware-wifi-zd1211-ar5007=y
+# CONFIG_PKG_sysbios-rpmsg is not set
 
 #
 # fonts
@@ -431,6 +436,7 @@ CONFIG_PKG_fribidi=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
+CONFIG_PKG_gmp=y
 CONFIG_PKG_gnutls=y
 # CONFIG_PKG_grilo is not set
 # CONFIG_PKG_grilo-plugins is not set
@@ -442,6 +448,7 @@ CONFIG_PKG_gnutls=y
 # CONFIG_PKG_gupnp-igd is not set
 # CONFIG_PKG_hal is not set
 # CONFIG_PKG_hicolor-icon-theme is not set
+# CONFIG_PKG_htop is not set
 CONFIG_PKG_i18n=y
 # CONFIG_OPT_i18n_fonts is not set
 # CONFIG_PKG_icu4c is not set
@@ -468,7 +475,6 @@ CONFIG_PKG_libcdio=y
 CONFIG_PKG_libcec=y
 # CONFIG_PKG_libcroco is not set
 CONFIG_PKG_libdaemon=y
-# CONFIG_PKG_libdce is not set
 CONFIG_PKG_libdri2=y
 # CONFIG_PKG_libdvbpsi is not set
 # CONFIG_PKG_libdvdnav is not set
@@ -481,11 +487,12 @@ CONFIG_PKG_libffi=y
 CONFIG_PKG_libftdi=y
 # CONFIG_PKG_libg7221 is not set
 CONFIG_PKG_libgcrypt=y
+# CONFIG_PKG_libgles-gc is not set
 CONFIG_PKG_libgpg-error=y
 # CONFIG_PKG_libiconv is not set
 # CONFIG_PKG_libid3tag is not set
 # CONFIG_PKG_libiec61883 is not set
-# CONFIG_PKG_liblockdev is not set
+CONFIG_PKG_liblockdev=y
 CONFIG_PKG_libmad=y
 CONFIG_PKG_libmicrohttpd=y
 CONFIG_PKG_libmms=y
@@ -549,10 +556,12 @@ CONFIG_OPT_mesa_nouveau=y
 # CONFIG_OPT_mesa_vmwgfx is not set
 CONFIG_OPT_mesa_vdpau=y
 CONFIG_OPT_mesa_xvmc=y
+# CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
 CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
 # CONFIG_PKG_ncursesw is not set
+CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
@@ -592,6 +601,7 @@ CONFIG_PKG_tinyxml=y
 # CONFIG_PKG_tslib is not set
 # CONFIG_PKG_twolame is not set
 CONFIG_PKG_v4l-utils=y
+# CONFIG_PKG_vmeta is not set
 CONFIG_PKG_wavpack=y
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
@@ -607,6 +617,8 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_iioutils is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
+# CONFIG_PKG_maliit-framework is not set
+# CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 CONFIG_PKG_pvr=y
@@ -637,11 +649,13 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_gst-plugins-base is not set
 # CONFIG_PKG_gst-plugins-gl is not set
 # CONFIG_PKG_gst-plugins-good is not set
+# CONFIG_PKG_gst-plugins-ugly is not set
 # CONFIG_PKG_gst-vaapi is not set
 # CONFIG_PKG_gstreamer is not set
 # CONFIG_PKG_libav is not set
 CONFIG_PKG_libbluray=y
 CONFIG_OPT_libbluray_aacs=y
+# CONFIG_PKG_libdce is not set
 # CONFIG_PKG_libdvdcss is not set
 # CONFIG_PKG_libomxil-bellagio is not set
 # CONFIG_PKG_libplayer is not set
@@ -697,6 +711,7 @@ CONFIG_PKG_vdr-sc=m
 # CONFIG_PKG_vdr-skinelchi is not set
 # CONFIG_PKG_vdr-skinenigmang is not set
 # CONFIG_PKG_vdr-skinsoppalusikka is not set
+# CONFIG_PKG_vdr-softhddevice is not set
 # CONFIG_PKG_vdr-solitaire is not set
 # CONFIG_PKG_vdr-spider is not set
 # CONFIG_PKG_vdr-streamdev-client is not set
@@ -728,6 +743,7 @@ CONFIG_OPT_xbmc_bluray=y
 CONFIG_OPT_xbmc_rtmp=y
 CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_externalffmpeg is not set
+# CONFIG_OPT_xbmc_externalffmpeglibav is not set
 CONFIG_OPT_xbmc_pvr=y
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
@@ -735,7 +751,8 @@ CONFIG_OPT_xbmc_libnfs=y
 CONFIG_OPT_xbmc_afpclient=y
 CONFIG_OPT_xbmc_airtunes=y
 CONFIG_OPT_xbmc_screensavers=y
-# CONFIG_OPT_xbmc_neon is not set
+# CONFIG_OPT_xbmc_dove is not set
+# CONFIG_OPT_xbmc_gstreamer is not set
 CONFIG_PKG_xbmc-addon-vdr=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
@@ -746,8 +763,8 @@ CONFIG_PKG_xbmc-addon-vdr=y
 #
 CONFIG_PKG_amionline=y
 # CONFIG_PKG_automounter-9p is not set
-CONFIG_PKG_automounter-nfs=y
-CONFIG_PKG_automounter-smb=y
+# CONFIG_PKG_automounter-nfs is not set
+# CONFIG_PKG_automounter-smb is not set
 CONFIG_PKG_bftpd=y
 # CONFIG_PKG_bluez is not set
 CONFIG_PKG_connman=y
@@ -957,7 +974,6 @@ CONFIG_OPT_linux_radeon=y
 CONFIG_OPT_linux_unichrome=y
 CONFIG_OPT_linux_vmwgfx=y
 CONFIG_PKG_llvm=y
-CONFIG_PKG_module-init-tools=y
 CONFIG_PKG_pciutils=y
 CONFIG_PKG_polkit=y
 # CONFIG_PKG_ralink-8070-3070-3370-5372-usb is not set
@@ -970,7 +986,6 @@ CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
 # CONFIG_PKG_uclibc-network is not set
-CONFIG_PKG_udev=y
 CONFIG_PKG_udisks=y
 CONFIG_PKG_util-linux-ng=y
 
@@ -995,6 +1010,7 @@ CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_linux-perftools is not set
 CONFIG_PKG_lsof=y
 CONFIG_PKG_nano=y
+# CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
 # CONFIG_PKG_screen is not set
@@ -1046,8 +1062,6 @@ CONFIG_OPT_libdrm_intel=y
 CONFIG_OPT_libdrm_radeon=y
 CONFIG_OPT_libdrm_nouveau=y
 CONFIG_OPT_libdrm_vmwgfx=y
-# CONFIG_OPT_libdrm_glamo is not set
-# CONFIG_OPT_libdrm_omap is not set
 CONFIG_PKG_libfontenc=y
 CONFIG_PKG_libpciaccess=y
 CONFIG_PKG_libxcb=y
@@ -1057,7 +1071,10 @@ CONFIG_PKG_mesa-demos=y
 CONFIG_PKG_pixman=y
 # CONFIG_PKG_rxvt is not set
 CONFIG_PKG_setxkbmap=y
-# CONFIG_PKG_xcb-utils is not set
+# CONFIG_PKG_xcb-util is not set
+# CONFIG_PKG_xcb-util-image is not set
+# CONFIG_PKG_xcb-util-keysyms is not set
+# CONFIG_PKG_xcb-util-wm is not set
 # CONFIG_PKG_xcompmgr is not set
 # CONFIG_PKG_xdialog is not set
 CONFIG_PKG_xdpyinfo=y
@@ -1065,6 +1082,7 @@ CONFIG_PKG_xf86-input-evdev=y
 CONFIG_PKG_xf86-input-synaptics=y
 CONFIG_PKG_xf86-video-ati=y
 CONFIG_PKG_xf86-video-displaylink=y
+# CONFIG_PKG_xf86-video-dove is not set
 CONFIG_PKG_xf86-video-fbdev=y
 CONFIG_PKG_xf86-video-fglrx=m
 # CONFIG_PKG_xf86-video-glint is not set
@@ -1079,7 +1097,7 @@ CONFIG_PKG_xf86-video-nv=y
 CONFIG_PKG_xf86-video-nvidia=m
 CONFIG_OPT_xf86videonvidia_vdpau=y
 CONFIG_PKG_xf86-video-nvidia-legacy=m
-CONFIG_PKG_xf86-video-nvidia-old=m
+# CONFIG_PKG_xf86-video-nvidia-old is not set
 # CONFIG_PKG_xf86-video-nvidia-very-old is not set
 CONFIG_PKG_xf86-video-openchrome=y
 # CONFIG_PKG_xf86-video-r128 is not set
