libgles-gc : revert to 0.8.0.3184

--- a/packages/libgles-gc/build
+++ b/packages/libgles-gc/build
@@ -5,10 +5,6 @@
 cd $BUILD/$1*
 
 mkdir -p .install/lib .install/include
-if [ "$ARM_HARDFLOAT_ABI" = yes ] ; then 
-  cp lib-hard/*.so .install/lib
-else
-  cp lib-soft/*.so .install/lib
-fi
+cp sdk/drivers/*.so .install/lib
 ln -sf libGLESv2x.so .install/lib/libGLESv2.so
-cp -R include/* .install/include
+cp -R sdk/include/* .install/include
