--- a/packages/sysbios-rpmsg/build
+++ b/packages/sysbios-rpmsg/build
@@ -2,13 +2,10 @@
 
 . config/options
 
-$SCRIPTS/unpack firmware-arm-syslink-ipc
-get_meta firmware-arm-syslink-ipc
-SYSM3="$ROOT/$PKG_BUILD_DIR/Notify_MPUSYS_reroute_Test_Core0.xem3"
-
-$SCRIPTS/unpack libdce
-get_meta libdce
-APPM3="$ROOT/$PKG_BUILD_DIR/firmware/ducati-m3-core0.xem3"
+$SCRIPTS/unpack firmware-arm-syslink-mm
+get_meta firmware-arm-syslink-mm
+SYSM3="$ROOT/$PKG_BUILD_DIR/ducati-dce-sysm3.xem3"
+APPM3="$ROOT/$PKG_BUILD_DIR/ducati-m3-core0.xem3"
 
 cd $BUILD/$1*
 
@@ -19,6 +16,5 @@ make
 cd ../..
 
 rm -rf .install
-mkdir -p .install/firmware/omap4
-cp -P src/utils/ducati-m3.bin .install/firmware/omap4
-ln -s omap4/ducati-m3.bin .install/firmware/ducati-m3.bin
+mkdir -p .install/firmware
+cp -P src/utils/ducati-m3.bin .install/firmware
