xbmc : fix argument in configure

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -32,9 +32,7 @@ xbmc_set_option $1 "dvdcss"            "dvdcss"
 xbmc_set_option $1 "bluray"            "libbluray"
 xbmc_set_option $1 "rtmp"              "rtmp"
 xbmc_set_option $1 "nonfree"           "non-free"
-xbmc_set_option $1 "externalffmpeg"    "external-ffmpeg"
 xbmc_set_option $1 "externalffmpeg"    "ffmpeg-libvorbis"
-xbmc_set_option $1 "externalffmpeglibav"    "external-ffmpeg"
 xbmc_set_option $1 "externalffmpeglibav"    "ffmpeg-libvorbis"
 xbmc_set_option $1 "libcec"            "libcec"
 xbmc_set_option $1 "libnfs"            "nfs"
@@ -42,6 +40,9 @@ xbmc_set_option $1 "afpclient"         "afpclient"
 xbmc_set_option $1 "airtunes"          "airtunes"
 xbmc_set_option $1 "screensavers"      "rsxs"
 xbmc_set_option $1 "gstreamer"         "gstreamer"
+
+pkg_uses $1 externalffmpeg && ! pkg_uses $1 externalffmpeglibav && xbmc_set_option $1 "externalffmpeg" "external-ffmpeg"
+pkg_uses $1 externalffmpeglibav && ! pkg_uses $1 externalffmpeg && xbmc_set_option $1 "externalffmpeglibav"    "external-ffmpeg"
 
 # check for nVidia ARM Tegra2 optimizations
 CFG_TEGRA="--disable-tegra"
