--- a/packages/grub-efi/config/grub.cfg
+++ b/packages/grub-efi/config/grub.cfg
@@ -1,3 +1,4 @@
+set prefix=/efi/boot
 set default=0
 set timeout=5
 
@@ -5,7 +6,7 @@ insmod efi_gop
 insmod efi_uga
 insmod font
 
-if loadfont /efi/boot/font_filename
+if loadfont $prefix/font_filename
 then
     insmod gfxterm
     set gfxmode=auto
@@ -14,14 +15,14 @@ then
 fi
 
 menuentry "Start distro-name release-nr" {
-  linux /vmlinuz extra_cmdline_params vga=789 persistent quiet splash loglevel=3 boot=casper --
+  linux /vmlinuz extra_cmdline_params vga=789 persistent quiet splash loglevel=3 boot=casper
   initrd /initrd
 }
 #INS#menuentry "Install distro-name release-nr" {
-#INS#  linux /vmlinuz extra_cmdline_params quiet loglevel=3 nocache systemd.unit=installator.target --
+#INS#  linux /vmlinuz extra_cmdline_params quiet loglevel=3 nocache systemd.unit=installator.target
 #INS#  initrd /initrd
 #INS#}
 menuentry "Debug distro-name" {
-  linux /vmlinuz extra_cmdline_params emergency --
+  linux /vmlinuz extra_cmdline_params emergency
   initrd /initrd
 }
