--- a/packages/usbutils/build
+++ b/packages/usbutils/build
@@ -2,7 +2,10 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
 do_configure \
   --datadir=/usr/share/misc \
   --datarootdir=/usr/share \
