libssh : upgrade to 0.5.2

--- a/packages/libssh/build
+++ b/packages/libssh/build
@@ -2,12 +2,17 @@
 
 . config/options
 
-cd $BUILD/$1*
-mkdir -p build && cd build
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+mkdir -p objdir-target
+cd objdir-target
 cmake  \
       -DCMAKE_FIND_ROOT_PATH=$LIB_PREFIX \
       -DCMAKE_INSTALL_PREFIX=/usr \
       -DWITH_GCRYPT="ON" \
       ..
+
 make
 make_install
