libcap : upgrade to 2.22

--- a/packages/libcap/build
+++ b/packages/libcap/build
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 [ "$TARGET_ARCH" = x86_64 -o "$TARGET_ARCH" = powerpc64 ] && suffix=64
 
@@ -18,10 +20,9 @@ make \
   BUILD_CFLAGS="$HOST_CFLAGS -I`pwd`/libcap/include" \
   PAM_CAP=no \
 
-make_install
+make_install 
 
 # remove static library
 rm -f .install/$lib/libcap.a
 [ -d .install/lib64 ] && mv .install/lib64 .install/lib
 
-exit 0
