xf86-video-intel : upgrade to 2.20.0

--- a/packages/xf86-video-intel/build
+++ b/packages/xf86-video-intel/build
@@ -2,7 +2,10 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
 xorg_drv_configure_prepend
 
 do_configure \
@@ -13,5 +16,6 @@ do_configure \
             --disable-glamor \
             --disable-debug \
             --with-xorg-module-dir=$XORG_PATH_MODULES
+
 make
 make_install
