--- a/packages/intel-gen4asm/build
+++ b/packages/intel-gen4asm/build
@@ -2,9 +2,12 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 do_autoconf
 do_configure host
+
 make
 make_install toolchain
