libpng : upgrade to 1.5.12

--- a/packages/libpng/build
+++ b/packages/libpng/build
@@ -2,20 +2,23 @@
 
 . config/options
 
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
 fix_png_config () {
-  for i in libpng libpng14; do
+  for i in libpng libpng15; do
     sed -i "s%^libdir=.*%libdir=\"$LIB_PREFIX/lib\"%" \
       .install/usr/bin/$i-config
-    sed -i "s%^includedir=.*%includedir=\"$LIB_PREFIX/include/libpng14\"%" \
+    sed -i "s%^includedir=.*%includedir=\"$LIB_PREFIX/include/libpng15\"%" \
       .install/usr/bin/$i-config
   done
 }
 
-cd $BUILD/$1*
-
 mkdir -p objdir-host
 cd objdir-host
 do_configure host
+
 make
 make_install toolchain
 fix_png_config
