--- a/packages/fuse-exfat/build
+++ b/packages/fuse-exfat/build
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 # upstream uses SCons, let's try to do without it
 
