gmp, gmp-host : prettify and standardize - make gmp-host full dependent on gmp

--- a/packages/gmp-host/build
+++ b/packages/gmp-host/build
@@ -1,12 +1,18 @@
 #!/bin/sh
 
 . config/options
-get_meta $1
+
+get_meta gmp 
+
+$SCRIPTS/unpack gmp
 
 export CFLAGS="$CFLAGS -fPIC"
 export CPPFLAGS="$CPPFLAGS -fexceptions"
 
 cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+mkdir -p objdir-host
+cd objdir-host
 
 setup_toolchain host
 
