--- a/packages/gmp/build
+++ b/packages/gmp/build
@@ -8,6 +8,9 @@ export CPPFLAGS="$CPPFLAGS -fexceptions"
 
 cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
+mkdir -p objdir-target
+cd objdir-target
+
 do_configure \
 	--enable-mpbsd \
 	--enable-cxx \
