libffi, libffi-host : upgrade to 3.0.11 and prettify and standardize as gmp

--- a/packages/libffi-host/build
+++ b/packages/libffi-host/build
@@ -2,7 +2,14 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $(echo $1 | sed -e "s/-host//")
+
+$SCRIPTS/unpack $PKG_NAME
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+mkdir -p objdir-host
+cd objdir-host
 
 do_configure host \
             --disable-debug \
