--- a/packages/libffi/build
+++ b/packages/libffi/build
@@ -2,7 +2,12 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+mkdir -p objdir-target
+cd objdir-target
 
 do_configure \
             --disable-debug \
