gmp, gmp-host : more improvement

--- a/packages/gmp-host/build
+++ b/packages/gmp-host/build
@@ -2,9 +2,9 @@
 
 . config/options
 
-get_meta gmp 
+get_meta $(echo $1 | sed -e "s/-host//")
 
-$SCRIPTS/unpack gmp
+$SCRIPTS/unpack $PKG_NAME
 
 export CFLAGS="$CFLAGS -fPIC"
 export CPPFLAGS="$CPPFLAGS -fexceptions"
