dbus : upgrade to 1.6.4

--- a/packages/dbus/build
+++ b/packages/dbus/build
@@ -2,11 +2,13 @@
 
 . config/options
 
+get_meta $1
+
 export ac_cv_have_abstract_sockets=yes
 
 pkg_uses $1 xorg && WITH_XORG="--with-x" || WITH_XORG="--without-x"
 
-cd $BUILD/$1*
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 mkdir -p objdir-host
 cd objdir-host
