--- a/packages/fontconfig/build
+++ b/packages/fontconfig/build
@@ -2,6 +2,9 @@
 
 . config/options
 
+get_meta $1
+
+
 fix_makefiles() {
   for m in fc-case fc-glyphname fc-lang fc-arch; do
     sed -i "s|LDFLAGS =.*|LDFLAGS =|" $m/Makefile
@@ -9,7 +12,7 @@ fix_makefiles() {
   done
 }
 
-cd $BUILD/$1*
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 mkdir -p objdir-host
 cd objdir-host
