--- a/packages/libxml2/build
+++ b/packages/libxml2/build
@@ -2,7 +2,9 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 mkdir -p objdir-host
 cd objdir-host
@@ -10,6 +12,7 @@ do_configure host \
             --enable-ipv6=no \
             --without-python \
             --with-zlib
+
 make
 make_install toolchain
 sed -i "s:\(['= ]\)/usr:\\1$ROOT/$TOOLCHAIN:g" .install/usr/bin/xml2-config
@@ -21,6 +24,7 @@ do_configure target \
             --enable-ipv6=no \
             --without-python \
             --with-zlib
+
 make
 make_install
 sed -i "s:\(['= ]\)/usr:\\1$LIB_PREFIX:g" .install/usr/bin/xml2-config
