--- a/packages/libXcursor/build
+++ b/packages/libXcursor/build
@@ -2,7 +2,10 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
 do_configure \
             --with-icondir=$XORG_PATH_ICONS \
             --with-cursorpath=$XORG_PATH_ICONS \
