--- a/packages/libftdi/build
+++ b/packages/libftdi/build
@@ -2,9 +2,11 @@
 
 . config/options
 
+get_meta $1
+
 export ac_cv_path_HAVELIBUSB=$ROOT/$TOOLCHAIN/bin/libusb-config
 
-cd $BUILD/$1*
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 export LIBS="-lusb"
 do_configure \
             --disable-libftdipp \
