--- a/packages/libtool-host/build
+++ b/packages/libtool-host/build
@@ -2,11 +2,19 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $(echo $1 | sed -e "s/-host//")
+
+$SCRIPTS/unpack $PKG_NAME
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+mkdir -p objdir-host
+cd objdir-host
 
 setup_toolchain host
-
-do_configure host --target=$TARGET_NAME --datadir=$ROOT/$TOOLCHAIN/share
+do_configure host \
+         --target=$TARGET_NAME \
+         --datadir=$ROOT/$TOOLCHAIN/share
 
 make
 make_install toolchain
