--- a/packages/libtool/build
+++ b/packages/libtool/build
@@ -2,11 +2,13 @@
 
 . config/options
 
-cd $BUILD/$1*/libltdl
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+cd libltdl
 do_configure \
             --enable-ltdl-install \
 
 make
 make_install
-rm -rf ../.install
-mv .install ..
