pkg-config : upgrade to 0.27

--- a/packages/pkg-config/build
+++ b/packages/pkg-config/build
@@ -1,10 +1,13 @@
 #!/bin/sh
 
 . config/options
+
 get_meta $1
 
 cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
-do_configure host
+do_configure host \
+        --with-internal-glib
+
 make
 make_install toolchain
