LVM : upgrade to 2.02.96

--- a/packages/LVM/build
+++ b/packages/LVM/build
@@ -2,10 +2,20 @@
 
 . config/options
 
-EXTRA_OPTS=""
-if [ "$DEBUG" = yes ]; then EXTRA_OPTS="--enable-debug"; else EXTRA_OPTS="--disable-debug"; fi
+get_meta $1
 
-cd $BUILD/$1*
+EXTRA_OPTS=""
+if [ "$DEBUG" = yes ]; then 
+  EXTRA_OPTS="--enable-debug"
+else
+  EXTRA_OPTS="--disable-debug"
+fi
+
+export ac_cv_func_malloc_0_nonnull=yes
+export ac_cv_func_realloc_0_nonnull=yes
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
 do_configure \
             --disable-lvm1_fallback \
             --disable-static_link \
