--- a/packages/xkbcomp/build
+++ b/packages/xkbcomp/build
@@ -2,12 +2,15 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 mkdir -p objdir-host
 cd objdir-host
 export LIBS="-lxcb -lX11 -lXau -lXdmcp"
 do_configure host
+
 make
 make_install toolchain
 cd ..
