--- a/packages/libcap/build
+++ b/packages/libcap/build
@@ -24,5 +24,5 @@ make_install
 
 # remove static library
 rm -f .install/$lib/libcap.a
-[ -d .install/lib64 ] && mv .install/lib64 .install/lib
+[ -d .install/lib64 ] && mv .install/lib64 .install/lib || exit 0
 
