defconfig for cubox : enable libnfs, add libbmm

--- a/config/defconfigs/geexbox-xbmc-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-cubox.conf
@@ -457,7 +457,7 @@ CONFIG_PKG_libaacs=y
 CONFIG_PKG_libass=y
 CONFIG_PKG_libatasmart=y
 # CONFIG_PKG_libavc1394 is not set
-# CONFIG_PKG_libbmm is not set
+CONFIG_PKG_libbmm=y
 # CONFIG_PKG_libbridge is not set
 CONFIG_PKG_libcap=y
 # CONFIG_PKG_libcdaudio is not set
@@ -495,7 +495,7 @@ CONFIG_PKG_libmpeg2=y
 CONFIG_PKG_libmysqlclient=y
 # CONFIG_PKG_libnfnetlink is not set
 # CONFIG_PKG_libnfo is not set
-# CONFIG_PKG_libnfs is not set
+CONFIG_PKG_libnfs=y
 CONFIG_PKG_libnfsidmap=y
 # CONFIG_PKG_libnice is not set
 # CONFIG_PKG_libnih is not set
@@ -525,6 +525,7 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 CONFIG_PKG_libtheora=y
+# CONFIG_PKG_libtirpc is not set
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
@@ -745,7 +746,7 @@ CONFIG_OPT_xbmc_nonfree=y
 # CONFIG_OPT_xbmc_pvr is not set
 CONFIG_OPT_xbmc_addons=y
 CONFIG_OPT_xbmc_libcec=y
-# CONFIG_OPT_xbmc_libnfs is not set
+CONFIG_OPT_xbmc_libnfs=y
 # CONFIG_OPT_xbmc_afpclient is not set
 # CONFIG_OPT_xbmc_airtunes is not set
 # CONFIG_OPT_xbmc_screensavers is not set
