--- a/packages/libffi-host/build
+++ b/packages/libffi-host/build
@@ -2,11 +2,13 @@
 
 . config/options
 
-get_meta $(echo $1 | sed -e "s/-host//")
+get_meta $1
 
-$SCRIPTS/unpack $PKG_NAME
 
-cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+
+$SCRIPTS/unpack $PKG_PARENT
+
+cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
 
 mkdir -p objdir-host
 cd objdir-host
@@ -16,3 +18,6 @@ do_configure host \
 
 make
 make_install toolchain
+
+mkdir -p $ROOT/$PKG_BUILD_DIR
+mv .install $ROOT/$PKG_BUILD_DIR
