--- a/packages/marvell-ipp/build
+++ b/packages/marvell-ipp/build
@@ -6,3 +6,7 @@ cd $BUILD/$1*
 
 mkdir -p .install/include/marvell-ipp
 cp include/* .install/include/marvell-ipp
+
+mkdir -p .install/usr/lib
+cp bin/*.so* .install/usr/lib
+
