cubox defconfig : add marvell-ipp

--- a/config/defconfigs/geexbox-xbmc-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-cubox.conf
@@ -538,6 +538,7 @@ CONFIG_PKG_libxml2=y
 # CONFIG_PKG_libyaml is not set
 # CONFIG_PKG_libz160 is not set
 CONFIG_PKG_lzo=y
+CONFIG_PKG_marvell-ipp=y
 # CONFIG_PKG_mediastreamer is not set
 CONFIG_PKG_mesa=y
 # CONFIG_OPT_mesa_gallium3d is not set
