libcap: fix (disable pam_cap)

--- a/packages/libcap/build
+++ b/packages/libcap/build
@@ -10,6 +10,8 @@ cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 export lib="lib$suffix"
 
+sed -i -e "/^PAM_CAP/s:=.*:= no:" Make.Rules
+
 make \
   prefix="$LIB_PREFIX" \
   CC="$CC" \
@@ -20,7 +22,7 @@ make \
   BUILD_CFLAGS="$HOST_CFLAGS -I`pwd`/libcap/include" \
   PAM_CAP=no \
 
-make_install 
+make_install
 
 # remove static library
 rm -f .install/$lib/libcap.a
