correct unit files in relation with udev

--- a/packages/automountd/unit/automountd.service
+++ b/packages/automountd/unit/automountd.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=udev automounter daemon
 Conflicts=installator.target
-After=udev-settle.service
+After=systemd-udev-settle.service
 
 [Service]
 ExecStart=/usr/bin/automountd
