--- a/packages/dietsplash/unit/dietsplash.service
+++ b/packages/dietsplash/unit/dietsplash.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Dietsplash Boot Screen
-After=udev.service
+After=systemd-udevd.service
 
 [Service]
 EnvironmentFile=/etc/dietsplash.conf
