--- a/packages/plymouth-lite/unit/plymouth-lite.service
+++ b/packages/plymouth-lite/unit/plymouth-lite.service
@@ -7,7 +7,7 @@
 
 [Unit]
 Description=Show Plymouth-lite Boot Screen
-After=udev-settle.service
+After=systemd-udev-settle.service
 
 ConditionPathExists=/dev/fb0
 # ConditionKernelCommandLine=splash
