--- a/packages/mpc/build
+++ b/packages/mpc/build
@@ -2,9 +2,11 @@
 
 . config/options
 
+get_meta $1
+
 setup_toolchain host
 
-cd $BUILD/$1*
+cd $$PKG_BUILD_DIR
 mkdir -p objdir
 cd objdir
 ../configure --host=$HOST_NAME \
