--- a/packages/mpc/build
+++ b/packages/mpc/build
@@ -6,9 +6,10 @@ get_meta $1
 
 setup_toolchain host
 
-cd $$PKG_BUILD_DIR
-mkdir -p objdir
-cd objdir
+cd $PKG_BUILD_DIR
+
+mkdir -p objdir-host
+cd objdir-host
 ../configure --host=$HOST_NAME \
              --build=$HOST_NAME \
              --target=$TARGET_NAME \
@@ -20,5 +21,3 @@ cd objdir
 
 make
 make_install toolchain
-rm -rf ../.install
-mv .install ..
