update defconfig for cubox

--- a/config/defconfigs/geexbox-xbmc-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-cubox.conf
@@ -106,12 +106,14 @@ CONFIG_OPT_TARGET_FLAT=y
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
 CONFIG_OPT_PACKAGE_REPO=y
-# CONFIG_TIMEZONE is not set
+CONFIG_TIMEZONE=y
+CONFIG_OPT_INCLUDED_TIMEZONES="all"
+CONFIG_OPT_TIMEZONE=""
 CONFIG_KEYMAP_QWERTY=y
 # CONFIG_KEYMAP_AZERTY is not set
 # CONFIG_KEYMAP_QWERTZ is not set
 CONFIG_LOCALE=y
-CONFIG_OPT_INCLUDED_LOCALES="en_US.UTF-8"
+CONFIG_OPT_INCLUDED_LOCALES=""
 CONFIG_OPT_DEFAULT_LOCALE="en_US.UTF-8"
 
 #
@@ -240,7 +242,7 @@ CONFIG_PKG_opkg=y
 # CONFIG_PKG_ar6k is not set
 CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
-# CONFIG_PKG_eventlircd is not set
+CONFIG_PKG_eventlircd=y
 # CONFIG_PKG_lirc is not set
 # CONFIG_PKG_s2-liplianin is not set
 # CONFIG_PKG_sgx530-OMAP34xx-drv is not set
@@ -630,8 +632,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_MPlayer is not set
 # CONFIG_PKG_dvbstreamer is not set
 # CONFIG_PKG_enna is not set
-CONFIG_PKG_ffmpeg=y
-# CONFIG_OPT_ffmpeg_vaapi is not set
+# CONFIG_PKG_ffmpeg is not set
 # CONFIG_PKG_freevo is not set
 # CONFIG_PKG_freevo-svn is not set
 # CONFIG_PKG_gst-auto-launch is not set
@@ -763,8 +764,8 @@ CONFIG_OPT_xbmc_dove=y
 #
 CONFIG_PKG_amionline=y
 # CONFIG_PKG_automounter-9p is not set
-CONFIG_PKG_automounter-nfs=y
-CONFIG_PKG_automounter-smb=y
+# CONFIG_PKG_automounter-nfs is not set
+# CONFIG_PKG_automounter-smb is not set
 CONFIG_PKG_bftpd=y
 # CONFIG_PKG_bluez is not set
 CONFIG_PKG_connman=y
@@ -926,7 +927,7 @@ CONFIG_OPT_dbus_xorg=y
 CONFIG_PKG_eglibc=y
 # CONFIG_OPT_eglibc_devtools is not set
 # CONFIG_OPT_eglibc_ipv6 is not set
-# CONFIG_PKG_eglibc-gconv-extra is not set
+CONFIG_PKG_eglibc-gconv-extra=y
 CONFIG_PKG_eglibc-gconv-minimal=y
 CONFIG_PKG_eglibc-gdb=y
 CONFIG_PKG_eglibc-network=y
@@ -968,7 +969,7 @@ CONFIG_PKG_polkit=y
 CONFIG_PKG_systemd=y
 CONFIG_OPT_systemd_devtools=y
 CONFIG_OPT_SYSTEMD=y
-# CONFIG_PKG_timezone-data is not set
+CONFIG_PKG_timezone-data=y
 CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
@@ -987,7 +988,7 @@ CONFIG_PKG_dialog=y
 # CONFIG_PKG_dsp-tools is not set
 # CONFIG_PKG_dvb-apps is not set
 # CONFIG_PKG_expedite is not set
-# CONFIG_PKG_extra-fonts-nonfree is not set
+CONFIG_PKG_extra-fonts-nonfree=y
 CONFIG_PKG_gdb=y
 # CONFIG_PKG_generator is not set
 # CONFIG_PKG_graphlcd-base is not set
@@ -1069,7 +1070,7 @@ CONFIG_PKG_xf86-input-evdev=y
 # CONFIG_PKG_xf86-video-ati is not set
 # CONFIG_PKG_xf86-video-displaylink is not set
 CONFIG_PKG_xf86-video-dove=y
-CONFIG_PKG_xf86-video-fbdev=y
+# CONFIG_PKG_xf86-video-fbdev is not set
 # CONFIG_PKG_xf86-video-glamo is not set
 # CONFIG_PKG_xf86-video-imx5 is not set
 # CONFIG_PKG_xf86-video-mach64 is not set
