libnfs : add specific version for cubox

--- a/config/platforms/arm/armada5xx/packages/libnfs/build
+++ b/config/platforms/arm/armada5xx/packages/libnfs/build
@@ -3,7 +3,9 @@
 . config/options
 
 get_meta $1
-
 cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
-do_install usr/lib/libnfs.so*
+do_configure
+
+make
+make_install
