--- a/packages/xf86-video-dove/config/30-cubox.conf
+++ b/packages/xf86-video-dove/config/30-cubox.conf
@@ -15,7 +15,7 @@ Section "Screen"
         Monitor         "lvds"
         SubSection "Display"
                 Depth     24
-                Modes    "1920x1080" "1280x720" 
+                Modes    "1920x1080" "1360x768" "1280x720" "1024x768" "800x600" "720x480" "640x480"
                 Virtual 2048 2048
         EndSubSection
 EndSection
