gmp, gmp-host : apply improved -host package settings

--- a/packages/gmp/build
+++ b/packages/gmp/build
@@ -4,10 +4,10 @@
 
 get_meta $1
 
+cd $PKG_BUILD_DIR
+
 export CFLAGS="$CFLAGS -fPIC"
 export CPPFLAGS="$CPPFLAGS -fexceptions"
-
-cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 mkdir -p objdir-target
 cd objdir-target
