--- a/packages/gmp-host/build
+++ b/packages/gmp-host/build
@@ -2,14 +2,14 @@
 
 . config/options
 
-get_meta $(echo $1 | sed -e "s/-host//")
+get_meta $1
 
-$SCRIPTS/unpack $PKG_NAME
+$SCRIPTS/unpack $PKG_PARENT
+
+cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
 
 export CFLAGS="$CFLAGS -fPIC"
 export CPPFLAGS="$CPPFLAGS -fexceptions"
-
-cd $BUILD/${PKG_NAME}-${PKG_VERSION}
 
 mkdir -p objdir-host
 cd objdir-host
@@ -24,4 +24,7 @@ do_configure host \
 make
 #make check
 make_install toolchain
+
+mkdir -p $ROOT/$PKG_BUILD_DIR
+mv .install $ROOT/$PKG_BUILD_DIR
 
