libtool, libtool-host : apply improved -host package settings

--- a/packages/libtool-host/build
+++ b/packages/libtool-host/build
@@ -2,11 +2,11 @@
 
 . config/options
 
-get_meta $(echo $1 | sed -e "s/-host//")
+get_meta $1
 
-$SCRIPTS/unpack $PKG_NAME
+$SCRIPTS/unpack $PKG_PARENT
 
-cd $BUILD/${PKG_NAME}-${PKG_VERSION}
+cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
 
 mkdir -p objdir-host
 cd objdir-host
@@ -22,4 +22,7 @@ make_install toolchain
 sed -i .install/usr/bin/libtoolize -e "s:^prefix=.*\$:prefix=$ROOT/$TOOLCHAIN:"
 
 cp -R .install/$ROOT/$TOOLCHAIN/share .install/usr/
+
+mkdir -p $ROOT/$PKG_BUILD_DIR
+mv .install $ROOT/$PKG_BUILD_DIR
 
