--- a/packages/libusb-host/build
+++ b/packages/libusb-host/build
@@ -2,9 +2,11 @@
 
 . config/options
 
-cd $BUILD/libusb-1*
+get_meta $1
 
-setup_toolchain host
+$SCRIPTS/unpack $PKG_PARENT
+
+cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
 
 mkdir objdir-host
 cd objdir-host
@@ -16,3 +18,7 @@ do_configure host \
 
 make
 make_install toolchain
+
+mkdir -p $ROOT/$PKG_BUILD_DIR
+mv .install $ROOT/$PKG_BUILD_DIR
+
