llvm, llvm-host : apply improved -host package settings

--- a/packages/llvm-host/build
+++ b/packages/llvm-host/build
@@ -2,9 +2,11 @@
 
 . config/options
 
-$SCRIPTS/unpack llvm
+get_meta $1
 
-cd $BUILD/llvm-[0-9]*
+$SCRIPTS/unpack $PKG_PARENT
+
+cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
 
 cd autoconf
 aclocal --force --verbose -I m4
@@ -39,4 +41,7 @@ do_configure host \
 
 make
 make_install toolchain
-cd ..
+
+mkdir -p $ROOT/$PKG_BUILD_DIR
+mv .install $ROOT/$PKG_BUILD_DIR
+
