opkg, opkg-host : apply improved -host package settings

--- a/packages/opkg-host/build
+++ b/packages/opkg-host/build
@@ -2,9 +2,11 @@
 
 . config/options
 
-$SCRIPTS/unpack opkg
+get_meta $1
 
-cd $BUILD/opkg*
+$SCRIPTS/unpack $PKG_PARENT
+
+cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
 
 setup_toolchain host
 CC="gcc" ./configure --disable-dependency-tracking \
@@ -24,3 +26,7 @@ make clean
 
 mkdir -p $ROOT/$TOOLCHAIN/bin/
 cp -P opkg-host $ROOT/$TOOLCHAIN/bin/opkg
+
+mkdir -p $ROOT/$PKG_BUILD_DIR/.install
+mv opkg-host $ROOT/$PKG_BUILD_DIR/.install
+
