--- a/packages/opkg/build
+++ b/packages/opkg/build
@@ -2,7 +2,10 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
+
 ./configure --host=$TARGET_NAME \
             --build=$HOST_NAME \
             --prefix=/usr \
