GLib, GLib-host : apply improved -host package settings

--- a/packages/GLib-host/build
+++ b/packages/GLib-host/build
@@ -2,24 +2,29 @@
 
 . config/options
 
-$SCRIPTS/unpack GLib
+get_meta $1
+
+$SCRIPTS/unpack $PKG_PARENT
+
+cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
 
 export ac_cv_func_posix_getpwuid_r=yes
 export ac_cv_func_posix_getgrgid_r=yes
 export glib_cv_stack_grows=no
 export glib_cv_uscore=no
 
-cd $BUILD/GLib*
-
 mkdir -p objdir-host
 cd objdir-host
 
-setup_toolchain host
 ../autogen.sh
-do_configure host --disable-gtk-doc-html
+do_configure host \
+       --disable-gtk-doc-html
+
 make
 make_install toolchain
 
 sed -i .install/usr/bin/glib-gettextize -e "s:^prefix=.*\$:prefix=$ROOT/$TOOLCHAIN:"
 
-cd ..
+mkdir -p $ROOT/$PKG_BUILD_DIR
+cp .install $ROOT/$PKG_BUILD_DIR
+
