--- a/packages/GLib/build
+++ b/packages/GLib/build
@@ -2,12 +2,19 @@
 
 . config/options
 
+get_meta $1
+
+cd $PKG_BUILD_DIR
+
 export ac_cv_func_posix_getpwuid_r=yes
 export ac_cv_func_posix_getgrgid_r=yes
 export glib_cv_stack_grows=no
 export glib_cv_uscore=no
 export glib_cv_have_qsort_r=yes
+
 [ $TARGET_LIBC = "uclibc" ] && export glib_cv_have_qsort_r=no
+EXTRA_OPTS=""
+[ $TARGET_LIBC = "uclibc" ] && EXTRA_OPTS="--with-libiconv=gnu"
 
 if [ "$TARGET_ARCH" = i386 ] ; then
   export ac_cv_alignof_guint32=4
@@ -27,12 +34,11 @@ if [ "$TARGET_ARCH" = arm ] ; then
   export ac_cv_alignof_unsigned_long=4 
 fi
 
-cd $BUILD/$1*
 sed -i "s%-Werror%%g" configure
+
+
 mkdir -p objdir-target
 cd objdir-target
-EXTRA_OPTS=""
-[ "$TARGET_LIBC" = "uclibc" ] && EXTRA_OPTS="--with-libiconv=gnu"
 GCC_NO_LTO=1 \
 do_configure \
             --enable-debug=no \
