--- a/packages/libXrandr/build
+++ b/packages/libXrandr/build
@@ -2,8 +2,12 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
+
 do_configure \
             --enable-malloc0returnsnull
+
 make
 make_install
