--- a/packages/xf86-input-evdev/build
+++ b/packages/xf86-input-evdev/build
@@ -2,8 +2,12 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
+
 do_configure \
             --with-xorg-module-dir=$XORG_PATH_MODULES
+
 make
 make_install
