--- a/packages/fontsproto/build
+++ b/packages/fontsproto/build
@@ -2,12 +2,15 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 mkdir -p objdir-host
 cd objdir-host
 do_configure host \
                   --disable-specs \
+
 make
 make_install toolchain
 cd ..
@@ -16,5 +19,6 @@ mkdir -p objdir-target
 cd objdir-target
 do_configure target \
                     --disable-specs \
+
 make
 make_install
