GLib, GLib-host: fix build

--- a/packages/GLib-host/build
+++ b/packages/GLib-host/build
@@ -16,6 +16,7 @@ export glib_cv_uscore=no
 mkdir -p objdir-host
 cd objdir-host
 
+setup_toolchain host
 ../autogen.sh
 do_configure host \
        --disable-gtk-doc-html
@@ -26,5 +27,5 @@ make_install toolchain
 sed -i .install/usr/bin/glib-gettextize -e "s:^prefix=.*\$:prefix=$ROOT/$TOOLCHAIN:"
 
 mkdir -p $ROOT/$PKG_BUILD_DIR
-cp .install $ROOT/$PKG_BUILD_DIR
+cp -r .install $ROOT/$PKG_BUILD_DIR
 
