mesa: build with wayland support

--- a/packages/mesa/build
+++ b/packages/mesa/build
@@ -2,10 +2,12 @@
 
 . config/options
 
+get_meta $1
+
 $SCRIPTS/clean $1
 $SCRIPTS/unpack $1
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
 export HOST_CC=$HOST_CC
 export OPT_FLAGS="$CFLAGS"
@@ -39,6 +41,9 @@ fi
 
 # EGL: Embedded Graphics Library (native platform graphics interface)
 EGL_DISPLAYS="x11,drm"
+if pkg_uses $1 wayland; then
+  EGL_DISPLAYS="wayland,$EGL_DISPLAYS"
+fi
 
 # build the internal compiler
 setup_toolchain host
