SDL, SDL-host : apply improved -host package settings

--- a/packages/SDL/build
+++ b/packages/SDL/build
@@ -2,6 +2,10 @@
 
 . config/options
 
+get_meta $1
+
+cd $PKG_BUILD_DIR
+
 if pkg_uses $1 devtools; then
   DEVTOOLS_CONFIG="--enable-dummyaudio --enable-video-dummy"
 else
@@ -44,7 +48,10 @@ else
   CFG_GL="--disable-video-opengl"
 fi
 
-cd $BUILD/$1*
+
+mkdir -p objdir-target
+cd objdir-target
+
 do_configure \
             --enable-libc \
             --enable-audio \
