--- a/packages/SDL-host/build
+++ b/packages/SDL-host/build
@@ -2,7 +2,15 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+$SCRIPTS/unpack $PKG_PARENT
+
+cd $BUILD/${PKG_PARENT}-${PKG_VERSION}
+
+mkdir -p objdir-host
+cd objdir-host
+
 do_configure host  \
              --enable-rpath \
              --enable-libc \
@@ -80,3 +88,7 @@ do_configure host  \
 
 make
 make_install toolchain
+
+mkdir -p $ROOT/$PKG_BUILD_DIR
+mv .install $ROOT/$PKG_BUILD_DIR
+
