SDL-image, SDL-image-host : apply improved -host package settings

--- a/packages/SDL-image/build
+++ b/packages/SDL-image/build
@@ -2,7 +2,13 @@
 
 . config/options
 
-cd $BUILD/$1*
+get_meta $1
+
+cd $PKG_BUILD_DIR
+
+mkdir -p objdir-target
+cd objdir-target
+
 do_configure \
             --enable-bmp \
             --enable-gif \
